# xcalculator

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  tox.ini
.github/workflows/: publish_release.yml
src/easy_calculator/: calculator.py  main.py
src/xcalculator/: calculator.py  main.py
tests/: test_calc.py
