[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "xcalculator"
description = "Cross-platform calculator"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["arithmetic", "cross", "platform", "xplatform", "tkinter", "easy", "simple", "calculator", "math", "mathematics", "executable", "application"]
authors = [
    {name = "Jacob A. Thompson", email = "jacobalthompson@gmail.com"}
]
maintainers = [
    {name = "Jacob A. Thompson", email = "jacobalthompson@gmail.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["sympy"]

[project.urls]
"Homepage" = "https://github.com/jacob-thompson/xcalculator"
"Bug Reports" = "https://github.com/jacob-thompson/xcalculator/issues"

[project.scripts]
xcalc = "xcalculator.main:main"
xcalculator = "xcalculator.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
